fixed overflow issue again commit

--- a/myassets/css/alum.css
+++ b/myassets/css/alum.css
@@ -13,7 +13,7 @@ html, body{
   height: 100%;
   min-width: 100%;
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 }
 
 #homepage{
@@ -21,7 +21,7 @@ html, body{
   width: 100%;
   /*max-width: 100vw;*/
   height: auto;
-  /*overflow: hidden;*/
+  overflow-x: hidden;
 
 }
 
@@ -45,7 +45,7 @@ html, body{
   background-repeat: no-repeat;
   background-color: #3C7A89;
   color: #FFF;
-  
+  overflow-x: hidden;
 }
 
 #topsec::after{
@@ -308,7 +308,7 @@ footer{
   width: 100%;
   height: auto;
   background-color: #16262e;
-  
+  color: #fff;
 }
 
 footer .card-body{
